--- a/style.css
+++ b/style.css
@@ -5,14 +5,41 @@
     --global-second: rgb(254,160,47);
     --global-accent: rgb(28, 228, 255);
 }
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
 body{
     background-color: var(--global-bg);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+#header{
+    width: 100%;
+    height: 92vh;
+    background-color: var(--global-bg2);
+    position: relative;
+}
+
+.logo{
+    float: left;
+}
+
+h1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5rem;
+    color: var(--global-primary);
+    letter-spacing: -3px;
+    font-weight: 100;
+    text-transform: uppercase;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
-    position: fixed;
     top: 0;
     width: 100%;
     padding: 0px;
@@ -56,24 +83,8 @@ body{
     color: var(--global-bg);
 }
 
-.logo{
-    float: left;
-}
-
-#header{
+section{
     width: 100%;
-    height: 25vh;
-    background-color: var(--global-bg2);
+    height: 50rem;
     position: relative;
-}
-h1{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 5rem;
-    color: var(--global-primary);
-    letter-spacing: -3px;
-    font-weight: 100;
-    text-transform: uppercase;
 }
