--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1{
 
 /* Add a black background color to the top navigation */
 .topnav {
+    position: sticky;
     top: 0;
     width: 100%;
     padding: 0px;
@@ -65,12 +66,6 @@ h1{
     font-size: 17px;
 }
 
-.topnav a.title {
-    background-color: var(--global-bg);
-    font-size: 20px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
 /* Change the color of links on hover */
 .topnav a:hover {
     background-color: var(--global-second);
@@ -87,4 +82,22 @@ section{
     width: 100%;
     height: 50rem;
     position: relative;
+}
+
+section h1{
+    top: 20rem;
+}
+
+footer{
+    position: relative;
+    height: 100rem;
+    background-color: var(--global-bg2);
+}
+
+/*class to apply on scroll with JS*/
+.fixed{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 20;
 }
