--- a/style.css
+++ b/style.css
@@ -22,9 +22,15 @@ html{
 
 #header{
     width: 100%;
-    height: 92vh;
+    height: 33rem;
     background-color: var(--global-bg2);
     position: relative;
+}
+
+.background{
+    opacity: 0.2;
+    width: 100%;
+    object-fit: fit;
 }
 
 /* Add a black background color to the top navigation */
@@ -62,17 +68,23 @@ html{
     color: var(--global-bg);
 }
 
+#navLogo:hover{
+    background-color: var(--global-bg2);
+}
+
 /* Add a color to the active/current link */
 .topnav a.active {
     background-color: var(--global-primary);
     color: var(--global-bg);
 }
 
-.logo{
+#navLogo{
     float: left;
+    padding: 0px;
 }
 
 h1{
+    z-index: 2;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -84,6 +96,7 @@ h1{
     text-transform: uppercase;
 }
 h2{
+    z-index: 1;
     position: relative;
     top: 10%;
     left: 10%;
@@ -98,14 +111,28 @@ h2{
     position: relative;
 }
 
+.main #mainBG{
+    top: 0px;
+    float: left;
+    width: 100%;
+    height: 50rem;
+    position: relative;
+    opacity: 0.2;
+}
 #projects{
     background-color: var(--global-bg2);
+}
+#contacts{
+    background-color: var(--global-bg2);
+}
+#home{
+    background-color: var(--global-bg);
 }
 
 footer{
     position: relative;
     height: 30rem;
-    background-color: var(--global-bg2);
+    background-color: var(--global-bg);
 }
 
 
