--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 #header{
@@ -112,10 +113,10 @@ h2{
 }
 
 .main #mainBG{
-    top: 0px;
+    top: 0rem;
     float: left;
     width: 100%;
-    height: 50rem;
+    object-fit: fit;
     position: relative;
     opacity: 0.2;
 }
