--- a/style.css
+++ b/style.css
@@ -14,11 +14,16 @@
 body{
     background-color: var(--global-bg);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    display: block;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    position: relative;
+    
 }
 
 html{
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 #header{
